<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/beber_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <include layout="@layout/actionbar_layout" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1" >

            <Button
        android:id="@+id/btn_agua"
                style="@style/PranchaButton"
                android:background="@drawable/agua"
                android:text="@string/agua" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1" >

            <Button
        android:id="@+id/btn_suco_uva"
                style="@style/PranchaButton"
                android:background="@drawable/suco_uva"
                android:text="@string/suco_uva" />
        </LinearLayout>
	</LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1" >

            <Button
        android:id="@+id/btn_suco_abacaxi"
                style="@style/PranchaButton"
                android:background="@drawable/suco_abacaxi"
                android:text="@string/suco_abacaxi" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1" >

            <Button
        android:id="@+id/btn_suco_laranja"
                style="@style/PranchaButton"
                android:background="@drawable/suco_laranja"
                android:text="@string/suco_laranja" />
        </LinearLayout>
        
    </LinearLayout>

    <!-- Include Footer -->

    <include layout="@layout/footer_layout" />

</LinearLayout>